# Amni-Browse

./: .gitignore  AMNISHUNT_DESIGN.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  ddg.html  run.bat
.github/: copilot-instructions.md
assets/: windows_app.rc
assets/chrome/: toolbar.html
docs/: GUARDIAN_COUNCIL.md  GUARDIAN_COUNCIL_MODULARIZE.md  GUARDIAN_COUNCIL_v0.5.md  checklist-async-response-delivery.md  checklist-v0.5.0-navigation.md  checklist_feature_expansion.md  checklist_modularize.md  checklist_servo_integration.md  checklist_v0.7.0_app_launcher.md  checklist_v0.7.0_internal_engine.md
docs/checklists/: checklist_hybrid_media_engine_v0.9.0.md  checklist_page_render_fix_v0.8.2.md  checklist_servo_chrome_ui_v0.10.0.md  checklist_v0.8.0_P3b_auto_height_viewport.md  checklist_v0.8.0_P3b_v2_click_reflow.md  checklist_webview2_double_header_v0.7.2.md
docs/guardian_councils/: guardian_council_page_render_fix.md  guardian_council_v0.8.0_P3b_auto_height.md  guardian_council_v0.8.0_P3b_v2_click_reflow.md  guardian_council_webview2_double_header.md
scripts/: create_shortcut.ps1  extract_js_check.py  install_build_deps.ps1
src/: app.rs  main.rs
src/crypto/: autofill.rs  mod (copy).rs  vault (copy).rs
src/engine/: adblocker.rs  amni_ir.rs  animations.rs  app_launcher.rs  base17.rs  cache_api.rs  canvas.rs  clipboard.rs  css_advanced.rs  devtools.rs  dom.rs  drm_fallback.rs  events.rs  extensions.rs  forms.rs  history_api.rs  image_decode.rs  indexeddb.rs  inline_layout.rs  ir_executor.rs  js.rs  js_bridge.rs  layout.rs  mod.rs  paint.rs  permissions.rs  pipeline.rs  print.rs  pwa.rs  service_workers.rs  shunt_sandbox.rs  style.rs  svg.rs  tabs.rs  text.rs  viewport.rs  web_apis.rs  web_fonts.rs  web_workers.rs  webrtc.rs  (+1 more)
src/media/: audio.rs  codecs.rs  mod.rs  mse.rs  stream.rs  video.rs
src/net/: cookies.rs  cors.rs  csp.rs  dns.rs  http.rs  ipc.rs  mod.rs  websocket.rs
src/platform/: media_engine.rs  mod.rs  servo.rs  servo_keys.rs  servo_real.rs  webview.rs
src/storage/: bookmarks.rs  config.rs  downloads.rs  history.rs  mod.rs  profiles.rs  session.rs
src/ui/: chrome.rs  emoji.rs  mod.rs  reader.rs  theme.rs  webview.rs
test/: test.rs  test_wry.rs
