[package]
name = "amni-browse"
version = "0.7.0"
edition = "2021"
description = "Amni Browse — A privacy-first, zero-telemetry web browser by Amni-Scient"
authors = ["Amni-Scient"]
license-file = "LICENSE"

[features]
default = ["webview"]
webview = ["dep:wry", "dep:tao"]
servo-engine = ["dep:winit", "dep:wgpu", "dep:egui", "dep:egui-winit", "dep:egui-wgpu", "dep:raw-window-handle", "dep:pollster", "dep:fontdue"]
servo-real = ["dep:servo", "dep:winit", "dep:raw-window-handle", "dep:surfman", "dep:euclid", "dep:keyboard-types", "dep:wry"]
js-engine = ["dep:boa_engine"]
media-playback = ["dep:symphonia", "dep:cpal"]
full = ["servo-engine", "js-engine", "media-playback"]

[dependencies]
tao = { version = "0.30", optional = true }
wry = { version = "0.46", optional = true }
winit = { version = "0.30", optional = true }
wgpu = { version = "22", optional = true }
egui = { version = "0.29", optional = true }
egui-winit = { version = "0.29", optional = true }
egui-wgpu = { version = "0.29", optional = true }
raw-window-handle = { version = "0.6", optional = true }
pollster = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
generic-array = "0.14"
http = "1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "ring", "webpki-tokio"] }
http-body-util = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
bytes = "1"
html5ever = "0.38"
markup5ever_rcdom = "0.38"
cssparser = "0.34"
selectors = "0.26"
taffy = "0.7"
fontdue = { version = "0.9", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
boa_engine = { version = "0.19", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["mp3", "aac", "vorbis", "flac", "wav", "pcm"] }
cpal = { version = "0.15", optional = true }
servo = { git = "https://github.com/servo/servo.git", rev = "68ca280", features = ["no-wgl", "media-gstreamer"], optional = true }
surfman = { version = "0.9", optional = true }
euclid = { version = "0.22", optional = true }
keyboard-types = { version = "0.7", optional = true }

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
embed-resource = "3"

[profile.dev]
debug = 0
incremental = false

